src/index.css
@import "tailwindcss";
@config "../tailwind.config.js";

@font-face {
  font-family: 'Chloe';
  src: url('./assets/Chloe/Chloe-Regular.woff2') format('woff2'),
       url('./assets/Chloe/Chloe-Regular.woff') format('woff'),
       url('./assets/Chloe/Chloe-Regular.ttf') format('truetype');
  font-weight: normal;
  font-style: normal;
}

html {
  scroll-behavior: smooth;
  scroll-snap-type: y proximity;
  overscroll-behavior-y: none;
}

body {
  @apply font-sans text-navy;
  background-color: #ede2e1;
  overscroll-behavior-y: none;
}

